<resources>
    <string name="app_name">BuySell</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- Bottom Navigation -->
    <string name="alert">Alert !</string>
    <string name="enter_password">Please enter password.</string>
    <string name="enter_username_password">Please enter userid and password.</string>
    <string name="enter_username">Please enter userId.</string>
    <string name="Cancel">cancel</string>
    <string name="OK">OK</string>

    <!--    homescreenactivity_string-->
    <string name="supp_prod">Supp w/o Prod</string>
    <string name="supp_item">Supp w/o Acc</string>
    <string name="pending_order">Pending Order</string>
    <string name="cart">Cart</string>
    <string name="pending_del">Pending to deliver</string>
    <string name="pending_rec">Pending to receive</string>
    <string name="pending_pay">Pending to pay</string>
    <string name="title_activity_demoo">demoo</string>
    <string name="cr_upd_supp">Create Supplies</string>
    <string name="cr_upd_item">Create Items</string>
    <string name="cr_upd_promo">Create Promo</string>
    <string name="cr_upd_ship">Create/Update \nShip to</string>
    <string name="cr_upd_bill">Create/Update \nBill to</string>
    <string name="do_you_want_to_logout">Are you sure you want to logout </string>
    <string name="open_pos">Open Pos</string>
    <string name="to_receive">To Receive</string>
    <string name="to_pay">To Pay</string>
    <string name="open_sos">Open Sos</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="back_to_login"><u>Back to Login?</u></string>
    <string name="exited_user">Do you have a account?</string>
    <string name="sign_up"><u>Sign Up..</u></string>
    <string name="login"><u>Login..</u></string>
    <string name="warning">Warning !</string>

    <string name="userid"><font fgcolor='#F9AA33'>*</font> User Id</string>
    <string name="password">Password <font fgcolor='#F9AA33'>*</font></string>
    <string name="fName">First Name <font fgcolor='#F9AA33'>*</font></string>
    <string name="lName">Last Name <font fgcolor='#F9AA33'>*</font></string>
    <string name="pNo">Phone Number <font fgcolor='#F9AA33'>*</font></string>
    <string name="cPassword">Conform Password <font fgcolor='#F9AA33'>*</font></string>
    <string name="nPassword">New Password <font fgcolor='#F9AA33'>*</font></string>
    <string name="OTP">OTP <font fgcolor='#F9AA33'>*</font></string>

    <string-array name="query_suggestions">
        <item>Android</item>
        <item>iOS</item>
        <item>SCALA</item>
        <item>Ruby</item>
        <item>JavaScript</item>
    </string-array>
</resources>