<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_160sdp"
        android:layout_gravity="center"
        android:background="@drawable/bgmain"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_30sdp"
        android:paddingRight="@dimen/_30sdp"
        android:paddingTop="@dimen/_30sdp"
        android:paddingBottom="@dimen/_30sdp">

        <TextView
            android:id="@+id/tvTitlePopup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:drawablePadding="5dp"
            android:gravity="left"
            android:text="Enter Otp!"
            android:textColor="@color/PrimaryDark"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:background="@drawable/divideline1" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:hint="@string/OTP">

            <EditText
                android:id="@+id/etOtp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_28sdp"
                android:layout_gravity="center"
                android:digits="0123456789"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:paddingLeft="@dimen/_5sdp"
                android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                android:textSize="@dimen/_10sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="right">

            <Button
                android:id="@+id/btnYesPopup"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_23sdp"
                android:background="@drawable/round_navy_blue"
                android:text="@string/OK"
                android:textColor="@color/white"
                android:textSize="@dimen/_8ssp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnNoPopup"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_23sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:background="@drawable/round_gray"
                android:text="@string/Cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/_8ssp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>